...
                        else contentColorFor(FloatingActionButtonDefaults.containerColor),
                    modifier = Modifier.padding(12.dp).size(75.6.dp)
                ) {
                    if (isClearAll) {
                        Icon(Icons.Filled.Delete, contentDescription = "Clear All", modifier = Modifier.size(36.dp))
                    } else {
                        Icon(Icons.Filled.Add, contentDescription = "Add Item", modifier = Modifier.size(36.dp))
                    }
                }
            }
        },
        bottomBar = {
            NavigationBar {
...
